--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,7 @@
 !!!
 html
   head
-    title= title
-    link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dijit/themes/tundra/tundra.css')
+    title JSON-RPC
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojo/dojo.js', djConfig='parseOnLoad: true')
+    script(type='text/javascript', src='/javascripts/dojo-release-1.7.2/dojo/dojo.js', djConfig='parseOnLoad: false')
   body(class='tundra')!= body
