--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 script(type='text/javascript', src='/socket.io/socket.io.js')
-script(type='text/javascript', src='/javascripts/rpc.js')
+script(type='text/javascript', src='/javascripts/main.js')
 
 h1 JSON-RPC traditional and websockets
 
