--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,5 @@ html
   head
     title JSON-RPC
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(type='text/javascript', src='/javascripts/dojo-release-1.7.2/dojo/dojo.js', djConfig='parseOnLoad: false')
+    script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojo/dojo.js', djConfig='parseOnLoad: false')
   body(class='tundra')!= body
